[workspace]
members = ["nu-zenoh", "nuze"]
resolver = "3"

[workspace.package]
authors = ["Mahmoud Mazouz <hello@fuzzypixelz.com>"]
edition = "2024"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/ZettaScaleLabs/nu-zenoh"
version = "0.2.1"

[workspace.dependencies]
clap = "4.5.42"
ctrlc = "3.4.7"
flume = "0.11.1"
nu-cli = "0.106.1"
nu-cmd-extra = "0.106.1"
nu-cmd-lang = "0.106.1"
nu-command = "0.106.1"
nu-engine = "0.106.1"
nu-explore = "0.106.1"
nu-json = "0.106.1"
nu-protocol = "0.106.1"
nu-std = "0.106.1"
nu-zenoh = { version = "0.2.1", path = "nu-zenoh" }
serde = "1.0.219"
tempfile = "3.20.0"
tracing-subscriber = "0.3.19"
# NOTE(fuzzypixelz): when bumping this, don't forget to also bump `nu_zenoh::signature_ext::ZENOH_VERSION`
zenoh = { version = "1.7.1", features = [
  "internal",
  "plugins",
  "shared-memory",
  "stats",
  "unstable",
] }
zenoh-codec = "1.7.1"
zenoh-protocol = "1.7.1"
