[workspace]
members = ["nu-zenoh", "nuze"]
resolver = "3"

[workspace.package]
authors = ["Mahmoud Mazouz <hello@fuzzypixelz.com>"]
edition = "2024"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/ZettaScaleLabs/nu-zenoh"
version = "0.2.1"

[workspace.dependencies]
clap = "4.5.42"
ctrlc = "3.4.7"
flume = "0.11.1"
nu-cli = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-cmd-extra = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-cmd-lang = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-command = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-engine = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-explore = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-json = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-protocol = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-std = { git = "https://github.com/nushell/nushell.git", rev = "7b31002" }
nu-zenoh = { version = "0.2.1", path = "nu-zenoh" }
serde = "1.0.219"
tempfile = "3.20.0"
tracing-subscriber = "0.3.19"
# NOTE(fuzzypixelz): when bumping this, don't forget to also bump `nu_zenoh::signature_ext::ZENOH_VERSION`
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "internal",
  "plugins",
  "shared-memory",
  "stats",
  "unstable",
] }
zenoh-codec = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-protocol = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
