[workspace]
members = ["nu-zenoh", "nuze"]
resolver = "3"

[workspace.package]
authors = ["Mahmoud Mazouz <hello@fuzzypixelz.com>"]
edition = "2024"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/ZettaScaleLabs/nu-zenoh"
version = "0.3.0"

[workspace.dependencies]
clap = "4.5.42"
ctrlc = "3.4.7"
flume = "0.11.1"
nu-cli = { version = "0.112.1" }
nu-cmd-extra = { version = "0.112.1" }
nu-cmd-lang = { version = "0.112.1" }
nu-command = { version = "0.112.1" }
nu-engine = { version = "0.112.1" }
nu-explore = { version = "0.112.1" }
nu-json = { version = "0.112.1" }
nu-protocol = { version = "0.112.1" }
nu-std = { version = "0.112.1" }
nu-zenoh = { version = "0.3.0", path = "nu-zenoh" }
serde = "1.0.219"
tempfile = "3.20.0"
tracing-subscriber = "0.3.19"
# NOTE(fuzzypixelz): when bumping this, don't forget to also bump `nu_zenoh::signature_ext::ZENOH_VERSION`
zenoh = { version = "1.9.0", features = [
  "internal",
  "plugins",
  "shared-memory",
  "stats",
  "unstable",
] }
zenoh-codec = "1.9.0"
zenoh-protocol = "1.9.0"
