#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors.workspace = true
description = "Nu-Zenoh integration"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "nu-zenoh"
repository.workspace = true
version.workspace = true

[dependencies]
flume = { workspace = true }
nu-engine = { workspace = true }
nu-json = { workspace = true }
nu-protocol = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
zenoh = { workspace = true }
