[package]
authors.workspace = true
description = "A Nu shell for Zenoh: debug systems, write (end-to-end) tests and build powerful CLI tools"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "nuze"
readme = "../README.md"
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
nu-cli = { workspace = true }
nu-cmd-extra = { workspace = true }
nu-cmd-lang = { workspace = true }
nu-command = { workspace = true }
nu-explore = { workspace = true }
nu-protocol = { workspace = true }
nu-zenoh = { workspace = true }
